# nodeorc

./: .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.rst  docker-compose-test.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: publish-pypi.yml  publish-release-pypi.yml  publish-test-pypi.yml
mockserver/: expectation.js  initializerJson.json  mockserver.properties
nodeorc/: Dockerfile  __init__.py  callbacks.py  config.py  db_ops.py  disk_management.py  disk_mng.py  log.py  main.py  models.py  requirements.txt  setup.py  tasks.py  utils.py  water_level.py
nodeorc/db/: __init__.py  active_config.py  base.py  callback.py  callback_url.py  camera_config.py  config.py  device.py  disk_management.py  init_basedata.py  models.py  profile.py  settings.py  storage.py  task_form.py  time_series.py  video.py  water_level_settings.py  water_level_timeseries.py
nodeorc/models/: __init__.py  callback.py  callback_url.py  config.py  storage.py  subtask.py  task.py  (+1 more)
service/: 10-toggleusbstick.rules  usb-mount.sh  usb-mount@.service
settings/: config_template.json
tests/: conftest.py  dummy_script.sh  test_amqp_task.py  test_callbacks.py  test_config.py  test_disk_management.py  test_disk_mng.py  test_io.py  test_local_task.py  test_main.py  test_main_start.py  test_main_upload_config.py  test_main_upload_water_level.py  test_models.py  test_s3.py  test_task.py  test_water_level.py  test_water_level_database.py  test_water_level_script.py  test_water_level_security.py
(+19 files in other folders)
