[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "nodeorc"
authors = [
  { name = "Hessel Winsemius", email = "winsemius@rainbowsensing.com" },
]
dependencies = [
    "boto3",
    "dask[distributed]",
    "ibm-cos-sdk",
    "pika",
    "pydantic==2.3.0",
    "pyopenrivercam",
    "python-dotenv",
    "requests",
    "sqlalchemy"
]

requires-python =">=3.9"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dynamic = ['version', 'description']

[project.optional-dependencies]
io = [
]
extra = [
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixtures"
]
docs = [
]

full = ["nodeorc[io,extra,dev,test,doc]"]
slim = ["nodeorc[io]"]

[project.urls]
Source = "https://github.com/localdevices/nodeorc"

[project.scripts]
nodeorc = "nodeorc.main:cli"

